# wsudo

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
client/: main.cpp
cmake/: FindClara.cmake  Findsodium.cmake
common/: common.cpp  events.cpp  logging.cpp  overlapped.cpp  winsupport.cpp
include/stdo/: client.h  ntapi.h  server.h  stdo.h  winsupport.h
include/wsudo/: client.h  corio.h  events.h  log.h  message.h  ntapi.h  server.h  session.h  stdo.h  tokenmanager.h  winsupport.h  wsudo.h
include/wsudo/int/: winsupport.h
lib/: CMakeLists.txt
lib/client/: CMakeLists.txt  client.cpp  connection.cpp  main.cpp
lib/common/: CMakeLists.txt  common.cpp  corio.cpp  events.cpp  message.cpp  overlapped.cpp  winsupport.cpp
lib/corio/: CMakeLists.txt  corio.cpp
lib/server/: CMakeLists.txt  clientconnection.cpp  connection.cpp  main.cpp  namedpipehandlefactory.cpp  server.cpp  session.cpp  tokenmanager-logon.cpp  tokenmanager.cpp
service/: clientconnection.cpp  main.cpp  namedpipehandlefactory.cpp  overlapped.cpp  server.cpp
test/: CMakeLists.txt  corio.cpp  events.cpp  message.cpp  pipe.cpp  test.cpp  user.cpp
